--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 .my-scuare {
 	max-width: 100%;
 	height: 50px;
-	background: rgb(238,174,202);
-	background: -moz-radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
-	background: -webkit-radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
-	background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#eeaeca",endColorstr="#94bbe9",GradientType=1);
+	background: rgb(0,0,0);
+	background: -moz-linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(17,145,142,1) 57%, rgba(69,252,164,1) 100%);
+	background: -webkit-linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(17,145,142,1) 57%, rgba(69,252,164,1) 100%);
+	background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(17,145,142,1) 57%, rgba(69,252,164,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#45fca4",GradientType=1);
 }
 
 .row {
@@ -16,9 +16,9 @@ h1 {
 	font-weight: bold;
 }
 .btn-success{
-    background: rgb(238,174,202);
-	background: -moz-radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
-	background: -webkit-radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
-	background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#eeaeca",endColorstr="#94bbe9",GradientType=1);
+	background: rgb(0,0,0);
+	background: -moz-linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(17,145,142,1) 57%, rgba(69,252,164,1) 100%);
+	background: -webkit-linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(17,145,142,1) 57%, rgba(69,252,164,1) 100%);
+	background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(17,145,142,1) 57%, rgba(69,252,164,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#45fca4",GradientType=1);
 }
