--- a/style.css
+++ b/style.css
@@ -16,9 +16,9 @@ h1 {
 	font-weight: bold;
 }
 .btn-success{
-    background: rgb(238,174,202);
-	background: -moz-radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
-	background: -webkit-radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
-	background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+    background: rgb(18, 53, 85);
+	background: -moz-radial-gradient(circle, rgba(238,174,202,1) 0%, rgb(25, 47, 75) 100%);
+	background: -webkit-radial-gradient(circle, rgba(238,174,202,1) 0%, rgb(22, 49, 82) 100%);
+	background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgb(27, 49, 79) 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#eeaeca",endColorstr="#94bbe9",GradientType=1);
 }
