--- a/style.css
+++ b/style.css
@@ -19,6 +19,6 @@ h1 {
     background: rgb(238,174,202);
 	background: -moz-radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
 	background: -webkit-radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
-	background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+	background: radial-gradient(circle, rgba(255, 221, 0, 0.765) 0%, rgb(233, 195, 148) 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#eeaeca",endColorstr="#94bbe9",GradientType=1);
 }
